force-app/main/default/objects/Lead_Email_Log__c/Lead_Email_Log__c.object-meta.xml
<CustomObject>
    <label>Lead Email Log</label>
    <nameField>
        <label>Lead Email Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>