force-app/main/default/objects/Lead_Email_Log__c/fields/Auto_Reply_Sent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Reply_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Reply Sent?</label>
    <type>Checkbox</type>
</CustomField>