force-app/main/default/objects/Lead_Email_Log__c/fields/Related_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Email Logs</relationshipLabel>
    <relationshipName>Lead_Email_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>