force-app/main/default/objects/Lead_Email_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Address__c</columns>
    <columns>Auto_Reply_Sent__c</columns>
    <columns>Email_Body__c</columns>
    <columns>Related_Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>