force-app/main/default/objects/Lead_Email_Log__c/listViews/Messaging_Queue_Lead_Email_Log.listView-meta.xml
<ListView>
    <fullName>Messaging_Queue_Lead_Email_Log</fullName>
    <filterScope>Queue</filterScope>
    <label>Messaging Queue</label>
    <queue>Messaging_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>